rm-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
